--- a/new/css/homepage.css
+++ b/new/css/homepage.css
@@ -56,6 +56,8 @@ footer {
 .main-nav .ps_topic_slug_section-two {}
 .main-nav .ps_topic_slug_section-three {}
 .main-nav .ps_topic_slug_section-four {}
+.main-nav .ps_topic_slug_section-five {}
+.main-nav .ps_topic_slug_section-six {}
 
 
 /* Scrolling Banner
