--- a/new/css/style.css
+++ b/new/css/style.css
@@ -131,12 +131,16 @@ footer {
 .main-nav .ps_topic_slug_section-two { background-position: 0 -104px; z-index: 198; }
 .main-nav .ps_topic_slug_section-three { background-position: 0 -156px; z-index: 197; }
 .main-nav .ps_topic_slug_section-four { background-position: 0 -208px; z-index: 196; }
+.main-nav .ps_topic_slug_section-five { background-position: 0 -260px; z-index: 195; }
+.main-nav .ps_topic_slug_section-six { background-position: 0 -312px; z-index: 194; }
 
 .main-nav .home-btn:focus, .main-nav .home-btn:hover { background-position: right top; }
 .main-nav .ps_topic_slug_section-one:focus, .main-nav .ps_topic_slug_section-one:hover { background-position: right -52px; }
 .main-nav .ps_topic_slug_section-two:focus, .main-nav .ps_topic_slug_section-two:hover { background-position: right -104px; }
 .main-nav .ps_topic_slug_section-three:focus, .main-nav .ps_topic_slug_section-three:hover { background-position: right -156px; }
 .main-nav .ps_topic_slug_section-four:focus, .main-nav .ps_topic_slug_section-four:hover { background-position: right -208px; }
+.main-nav .ps_topic_slug_section-five:focus, .main-nav .ps_topic_slug_section-five:hover { background-position: right -260px; }
+.main-nav .ps_topic_slug_section-six:focus, .main-nav .ps_topic_slug_section-six:hover { background-position: right -312px; }
 
 
 /* Pop Ups */
@@ -203,6 +207,8 @@ footer {
 .main-nav .ps_topic_slug_section-two ul {}
 .main-nav .ps_topic_slug_section-three ul {}
 .main-nav .ps_topic_slug_section-four ul {}
+.main-nav .ps_topic_slug_section-five ul {}
+.main-nav .ps_topic_slug_section-six ul {}
 
 /* To style the links in the pop up menus
    Styles for ALL menus added here, styles for individual menus added below */
@@ -223,6 +229,8 @@ footer {
 .main-nav .ps_topic_slug_section-two ul li a {}
 .main-nav .ps_topic_slug_section-three ul li a {}
 .main-nav .ps_topic_slug_section-four ul li a {}
+.main-nav .ps_topic_slug_section-five ul li a {}
+.main-nav .ps_topic_slug_section-six ul li a {}
 
 /* To style the hover effects for the links in the popup menus
    Styles for ALL menus added here, styles for individual menus added below */
@@ -238,6 +246,8 @@ footer {
 .main-nav .ps_topic_slug_section-two ul li:focus, .main-nav .ps_topic_slug_section-two ul li:hover {}
 .main-nav .ps_topic_slug_section-three ul li:focus, .main-nav .ps_topic_slug_section-three ul li:hover {}
 .main-nav .ps_topic_slug_section-four ul li:focus, .main-nav .ps_topic_slug_section-four ul li:hover {}
+.main-nav .ps_topic_slug_section-five ul li:focus, .main-nav .ps_topic_slug_section-five ul li:hover {}
+.main-nav .ps_topic_slug_section-six ul li:focus, .main-nav .ps_topic_slug_section-six ul li:hover {}
 
 
 /* To specifically style the hover effects for the links for each menu, eg, text colour etc.  */
@@ -245,6 +255,8 @@ footer {
 .main-nav .ps_topic_slug_section-two ul a:focus, .main-nav .ps_topic_slug_section-two ul a:hover {}
 .main-nav .ps_topic_slug_section-three ul a:focus, .main-nav .ps_topic_slug_section-three ul a:hover {}
 .main-nav .ps_topic_slug_section-four ul a:focus, .main-nav .ps_topic_slug_section-four ul a:hover {}
+.main-nav .ps_topic_slug_section-five ul a:focus, .main-nav .ps_topic_slug_section-five ul a:hover {}
+.main-nav .ps_topic_slug_section-six ul a:focus, .main-nav .ps_topic_slug_section-six ul a:hover {}
 
 
 /* Policy & PrimarySite Link
